force-app/main/default/objects/SiteUserSavedSearch__c/SiteUserSavedSearch__c.object-meta.xml
<CustomObject>
    <label>SiteUserSavedSearch</label>
    <nameField>
        <label>SiteUserSavedSearch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SiteUserSavedSearches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>