force-app/main/default/objects/SiteUserSavedSearch__c/fields/Checks__c.field-meta.xml
<CustomField>
    <fullName>Checks__c</fullName>
    <label>Checks</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>