force-app/main/default/objects/SiteUserSavedSearch__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <inlineHelpText>Locations selected for the Saved Sarch</inlineHelpText>
    <label>Locations</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>