force-app/main/default/objects/SiteUserSavedSearch__c/fields/Macroregions__c.field-meta.xml
<CustomField>
    <fullName>Macroregions__c</fullName>
    <label>Macroregions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>