force-app/main/default/objects/SiteUserSavedSearch__c/fields/Planting_Date__c.field-meta.xml
<CustomField>
    <fullName>Planting_Date__c</fullName>
    <label>Planting Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>