force-app/main/default/objects/SiteUserSavedSearch__c/fields/Row_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Row_Spacing__c</fullName>
    <label>Row Spacing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>