force-app/main/default/objects/SiteUserSavedSearch__c/fields/SiteUserRecommendation__c.field-meta.xml
<CustomField>
    <fullName>SiteUserRecommendation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteUserRecommendation</label>
    <referenceTo>SiteUserRecommendation__c</referenceTo>
    <relationshipLabel>SiteUserSavedSearches</relationshipLabel>
    <relationshipName>SiteUserSavedSearches</relationshipName>
    <type>Lookup</type>
</CustomField>