force-app/main/default/objects/SiteUserSavedSearch__c/fields/SoilType__c.field-meta.xml
<CustomField>
    <fullName>SoilType__c</fullName>
    <label>SoilType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>