force-app/main/default/objects/SiteUserSavedSearch__c/fields/Stability_Check__c.field-meta.xml
<CustomField>
    <fullName>Stability_Check__c</fullName>
    <label>Stability Check</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>