force-app/main/default/objects/SiteUserSavedSearch__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>SiteUserSavedSearches</relationshipLabel>
    <relationshipName>SiteUserSavedSearches</relationshipName>
    <type>Lookup</type>
</CustomField>