force-app/main/default/objects/SiteUserSavedSearch__c/fields/Yield_Summary_Chart_Headers__c.field-meta.xml
<CustomField>
    <fullName>Yield_Summary_Chart_Headers__c</fullName>
    <label>Yield Summary Chart Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>