force-app/main/default/objects/SiteUserSavedSearch__c/fields/Yield_Summary_Check_Set__c.field-meta.xml
<CustomField>
    <fullName>Yield_Summary_Check_Set__c</fullName>
    <label>Yield Summary Check Set</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>