force-app/main/default/objects/SiteUserSavedSearch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Variety__c</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Season__c</columns>
    <columns>SiteUser__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Environment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>